This time correctly fix picture overflow

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -3,7 +3,7 @@ body {
 }
 
 .photo-about {
-  height: 384px;
+  height: 361px;
 }
 
 .section {
@@ -50,8 +50,8 @@ h2, h3 {
   position: relative;
 }
 #about p {
-  margin-top: 58px;
-  margin-bottom: 158px;
+  margin-top: 9px;
+  // margin-bottom: 158px;
 }
 #projects {
   background-color: white;
